# weather_forecast_in_Yaroslavl_bot

./: .env_template  .gitignore  README.md  bot.py  config.py  parser.py  pyproject.toml  requirements.txt  setup.cfg
